<resources>
    <string name="app_name">Meau</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cadastrar_animal">CadastrarAnimal</string>
    <string name="title_activity_login_app">LoginApp</string>
    <string name="title_activity_cadastro_pessoa">Cadastro Pessoal</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">com.example.meau</string>
    <string name="facebook_login_protocol_scheme" translatable="false">https://appmeau.firebaseapp.com/__/auth/handler</string>
    <string name="title_activity_google_sign_in">GoogleSignInActivity</string>

    //Strings do sexo do animal
    <string name="animal_sexo_m">Macho</string>
    <string name="animal_sexo_f">Femea</string>

    //Strings da idade do animal
    <string name="animal_adulto">Adulto</string>
    <string name="animal_filhote">Filhote</string>

    //Strings do porte do animal
    <string name="animal_porte_p">Pequeno</string>
    <string name="animal_porte_m">Medio</string>
    <string name="animal_porte_g">Grande</string>

    //Strings de localidades
    <string name="asa_sul">Asa Sul - Brasilia - DF</string>

    //Strings de nomes
    <string name="nomeAnimal">Spot</string>

</resources>
