<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdotar">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/Card"
        android:layout_width="0dp"
        android:layout_height="264dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <ImageView
            android:id="@+id/imagemCard"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:clickable="true"
            app:srcCompat="@drawable/cachorro" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCard"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#fee29b"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/nomeAnimal" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/sexoAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="200dp"
        android:text="@string/animal_sexo_m"
        app:layout_constraintStart_toStartOf="@+id/Card"
        app:layout_constraintTop_toTopOf="@+id/Card" />

    <TextView
        android:id="@+id/idadeAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:text="@string/animal_adulto"
        app:layout_constraintEnd_toStartOf="@+id/porteAnimal"
        app:layout_constraintStart_toEndOf="@+id/sexoAnimal"
        app:layout_constraintTop_toTopOf="@+id/Card" />

    <TextView
        android:id="@+id/porteAnimal"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="44dp"
        android:text="@string/animal_porte_g"
        app:layout_constraintEnd_toEndOf="@+id/Card"
        app:layout_constraintTop_toTopOf="@+id/Card" />

    <TextView
        android:id="@+id/localAnimal"
        android:layout_width="253dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/asa_sul"
        app:layout_constraintBottom_toBottomOf="@+id/Card"
        app:layout_constraintEnd_toEndOf="@+id/Card"
        app:layout_constraintStart_toStartOf="@+id/Card"
        app:layout_constraintTop_toBottomOf="@+id/idadeAnimal" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp" />

</android.support.constraint.ConstraintLayout>